--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -17,4 +17,4 @@
     become_user : root
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8083 suneelraj/health:latest
+    command: docker run -itd -p 8084:8083 saradha91/healthcare:latest
