--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,20 +1,19 @@
 - name : Configure Docker on EC2 Instances
   hosts : all
-  become: true
+  become: yes
   connection : ssh
   tasks : 
   - name: updating apt
-    command : sudo apt-get update
-
+    command : "rm -rf /var/lib/dpkg/lock*"
+    
+  - name: updating apt
+    command : "apt-get update"
+    
   - name : Install Docker
-    command : sudo apt-get install -y docker.io
-    become : yes
-    become_user : root
+    command : apt-get install -y docker.io
 
   - name : Start Docker Service
-    command : sudo systemctl start docker
-    become : yes
-    become_user : root
+    command : systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8083 saradha91/healthcare:latest
+    command: docker run -itd -p 8085:8081 saradha91/healthcare:latest
